# src/model/dto/person/CreatePersonDto.ts
@@ -1,0 +1,10 @@
+export class CreatePersonDto {
+    public name: string;
+    public email: string;
+
+    constructor(name: string, email: string) {
+        this.name = name;
+        this.email = email;
+    }
+
+}
